fix(core,api,frontend): populate property expenses in projections, remove redundant property income
ProjectionInputBuilder now populates annualOperatingExpenses (insurance +
maintenance), annualPropertyTax, and annualMortgageInterest from the linked
PropertyEntity for rental_property income sources. Previously all three were
null, causing projections to show full gross rent with zero expense deductions.

PropertyAnalyticsService now derives rental income from linked IncomeSource
entities instead of the legacy PropertyIncome table. PropertyService.addIncome()
and the POST /properties/{id}/income endpoint are removed — all rental income
flows through IncomeSource. Property cash flow endpoints are expense-only.

Frontend PropertyCashFlowSection shows expenses only (income bar and "Add Income"
form removed). PropertyDetailPage displays a "Linked Income Source" card with
name, annual/monthly amount, and a link to the Income Sources page.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>